GiRaFFE_NRPy_Main_Driver: Edited the notebook for grammar. Removed the word 'parenthetical' from this and the other files.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -48,28 +48,28 @@
     "During a given RK substep, we will perform the following steps in this order, based on the order used in the original `GiRaFFE`:\n",
     "0. [Step 0](#prelim): Preliminaries\n",
     "1. [Step 1](#rhs): Calculate the right-hand sides\n",
-    "    1. [Step 1.a](#parenthetical): Calculate the portion of the gauge terms for $A_k$, $(\\alpha \\Phi - \\beta^j A_j)$ and $\\Phi$, $(\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi])$ *inside* the parentheses to be finite-differenced.\n",
-    "        * **GRFFE/equations.py**, **GRHD/equations.py**\n",
+    "    1. [Step 1.a](#operand): Calculate the portion of the gauge terms for $A_k$, $(\\alpha \\Phi - \\beta^j A_j)$ and $\\Phi$, $(\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi])$ *inside* the parentheses to be finite-differenced.\n",
+    "        1. **GRFFE/equations.py**, **GRHD/equations.py**\n",
     "    1. [Step 1.b](#source): Calculate the source terms of $\\partial_t A_i$, $\\partial_t \\tilde{S}_i$, and $\\partial_t [\\sqrt{\\gamma} \\Phi]$ right-hand sides\n",
-    "        * **GRFFE/equations.py**, **GRHD/equations.py**, **GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms**\n",
+    "        1. **GRFFE/equations.py**, **GRHD/equations.py**, **GiRaFFE_NRPy/GiRaFFE_NRPy_Source_Terms**\n",
     "    1. [Step 1.c](#flux): Calculate the Flux terms\n",
-    "        * In each direction: \n",
-    "        * Interpolate the metric gridfunctions to cell faces\n",
-    "            * **GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py**\n",
-    "        * Reconstruct primitives $\\bar{v}^i$ and $B^i$ on cell faces with the piecewise-parabolic method\n",
-    "            * **GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py**\n",
-    "        * Compute the fluxes of $\\tilde{S}_i$ and $A_i$ and add the appropriate combinations to the evolution equation right-hand sides\n",
-    "            * **GiRaFFE_NRPy/Stilde_flux.py**, **GiRaFFE_NRPy/Afield_flux.py**\n",
+    "        1. In each direction: \n",
+    "        1. Interpolate the metric gridfunctions to cell faces\n",
+    "            1. **GiRaFFE_NRPy/GiRaFFE_NRPy_Metric_Face_Values.py**\n",
+    "        1. Reconstruct primitives $\\bar{v}^i$ and $B^i$ on cell faces with the piecewise-parabolic method\n",
+    "            1. **GiRaFFE_NRPy/GiRaFFE_NRPy_PPM.py**\n",
+    "        1. Compute the fluxes of $\\tilde{S}_i$ and $A_i$ and add the appropriate combinations to the evolution equation right-hand sides\n",
+    "            1. **GiRaFFE_NRPy/Stilde_flux.py**, **GiRaFFE_NRPy/Afield_flux.py**\n",
     "1. [Step 2](#poststep): Recover the primitive variables and apply boundary conditions (post-step)\n",
     "    1. [Step 2.a](#potential_bc): Apply boundary conditions to $A_i$ and $\\sqrt{\\gamma} \\Phi$\n",
-    "        * **GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**\n",
+    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**\n",
     "    1. [Step 2.b](#a2b): Compute $B^i$ from $A_i$\n",
-    "        * **GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py**\n",
+    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_A2B.py**\n",
     "    1. [Step 2.c](#c2p): Run the Conservative-to-Primitive solver\n",
-    "        * This applies fixes to $\\tilde{S}_i$, then computes $\\bar{v}^i$. A current sheet prescription is then applied to $\\bar{v}^i$, and $\\tilde{S}_i$ is recomputed to be consistent.\n",
-    "        * **GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py**\n",
+    "        1. This applies fixes to $\\tilde{S}_i$, then computes $\\bar{v}^i$. A current sheet prescription is then applied to $\\bar{v}^i$, and $\\tilde{S}_i$ is recomputed to be consistent.\n",
+    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_C2P_P2C.py**\n",
     "    1. [Step 2.d](#velocity_bc): Apply outflow boundary conditions to $\\bar{v}^i$\n",
-    "        * **GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**\n",
+    "        1. **GiRaFFE_NRPy/GiRaFFE_NRPy_BCs.py**\n",
     "1. [Step 3](#write_out): Write out the C code function\n",
     "1. [Step 3](#code_validation): Self-Validation against `GiRaFFE_NRPy_Main_Drive.py`\n",
     "1. [Step 5](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file\n"
@@ -84,7 +84,7 @@
     "# Step 0: Preliminaries \\[Back to [top](#toc)\\]\n",
     "$$\\label{prelim}$$\n",
     "\n",
-    "We begin by importing the NRPy+ core functionality. We also import the Levi-Civita symbol, the GRHD module, and the GRFFE module."
+    "We begin by importing the NRPy+ core functionality. We also import the GRHD module and the GRFFE module."
    ]
   },
   {
@@ -138,14 +138,14 @@
     "# Step 1: Calculate the right-hand sides \\[Back to [top](#toc)\\]\n",
     "$$\\label{rhs}$$\n",
     "\n",
-    "<a id='parenthetical'></a>\n",
+    "<a id='operand'></a>\n",
     "\n",
     "In the method of lines using Runge-Kutta methods, each timestep involves several \"RK substeps\" during which we will run the same set of function calls. These can be divided into two groups: one in which the RHSs themselves are calculated, and a second in which boundary conditions are applied and auxiliary variables updated (the post-step). Here, we focus on that first group.\n",
     "\n",
     "## Step 1.a: Calculate the portion of the gauge terms for $A_k$, $(\\alpha \\Phi - \\beta^j A_j)$ and $\\Phi$, $(\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi])$ *inside* the parentheses to be finite-differenced. \\[Back to [top](#toc)\\]\n",
-    "$$\\label{parenthetical}$$\n",
+    "$$\\label{operand}$$\n",
     "\n",
-    "The source terms of our evolution equations consist of two terms that are derivatives of some parenthetical quantity. We can save some effort and execution time (at the cost of memory needed) by computing these parentheticals, storing them, and then finite-differencing that stored variable. For more information, see the notebook for the [implementation](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb) and the [validation](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb), as well as [Tutorial-GRFFE_Equations-Cartesian](../Tutorial-GRFFE_Equations-Cartesian.ipynb) and [Tutorial-GRHD_Equations-Cartesian](../Tutorial-GRHD_Equations-Cartesian.ipynb) for the terms themselves. "
+    "The gauge terms of our evolution equations consist of two derivative terms: the Lorentz gauge term of $\\partial_t A_k$, which is $\\partial_k (\\alpha \\Phi - \\beta^j A_j)$ and the non-damping, flux-like term of $\\partial_t [\\psi^6 \\Phi]$, which is $\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi])$. We can save some effort and execution time (at the cost of memory needed) by computing the derivative operands, storing them, and then finite-differencing that stored variable. For more information, see the notebook for the [implementation](Tutorial-GiRaFFE_NRPy-Source_Terms.ipynb) and the [validation](Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb), as well as [Tutorial-GRFFE_Equations-Cartesian](../Tutorial-GRFFE_Equations-Cartesian.ipynb) and [Tutorial-GRHD_Equations-Cartesian](../Tutorial-GRHD_Equations-Cartesian.ipynb) for the terms themselves. "
    ]
   },
   {
@@ -157,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_parentheticals_for_RHSs() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_parentheticals_for_RHSs.h\n"
+      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file GiRaFFE_standalone_Ccodes\\RHSs\\calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n"
      ]
     }
    ],
@@ -178,8 +178,8 @@
     "AevolParen = gri.register_gridfunctions(\"AUXEVOL\",\"AevolParen\")\n",
     "\n",
     "GRHD.compute_sqrtgammaDET(gammaDD)\n",
-    "GRFFE.compute_AD_source_term_parenthetical_for_FD(GRHD.sqrtgammaDET,betaU,alpha,psi6Phi,AD)\n",
-    "GRFFE.compute_psi6Phi_rhs_parenthetical(gammaDD,GRHD.sqrtgammaDET,betaU,alpha,AD,psi6Phi)\n",
+    "GRFFE.compute_AD_source_term_operand_for_FD(GRHD.sqrtgammaDET,betaU,alpha,psi6Phi,AD)\n",
+    "GRFFE.compute_psi6Phi_rhs_flux_term_operand(gammaDD,GRHD.sqrtgammaDET,betaU,alpha,AD,psi6Phi)\n",
     "\n",
     "parens_to_print = [\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"AevolParen\"),rhs=GRFFE.AevolParen),\\\n",
@@ -191,7 +191,7 @@
     "subdir = \"RHSs\"\n",
     "cmd.mkdir(os.path.join(out_dir, subdir))\n",
     "desc = \"Calculate quantities to be finite-differenced for the GRFFE RHSs\"\n",
-    "name = \"calculate_parentheticals_for_RHSs\"\n",
+    "name = \"calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs\"\n",
     "outCfunction(\n",
     "    outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *restrict params,const REAL *restrict in_gfs,REAL *restrict auxevol_gfs\",\n",
@@ -209,7 +209,7 @@
     "## Step 1.b: Calculate the source terms of $\\partial_t A_i$, $\\partial_t \\tilde{S}_i$, and $\\partial_t [\\sqrt{\\gamma} \\Phi]$ right-hand sides \\[Back to [top](#toc)\\]\n",
     "$$\\label{source}$$\n",
     "\n",
-    "With the parentheticals stored in memory from the previous step, we can now now calculate the terms on the RHS of $A_i$ and $[\\sqrt{\\gamma} \\Phi]$ that involve the derivatives of those terms. We also compute the other term in the RHS of $[\\sqrt{\\gamma} \\Phi]$, which is a straightforward damping term. "
+    "With the operands of the gradient of divergence operators stored in memory from the previous step, we can now now calculate the terms on the RHS of $A_i$ and $[\\sqrt{\\gamma} \\Phi]$ that involve the derivatives of those terms. We also compute the other term in the RHS of $[\\sqrt{\\gamma} \\Phi]$, which is a straightforward damping term. "
    ]
   },
   {
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we will write the function to compute the electric field contribution to the induction equation RHS. This is coded with documentation in [Tutorial-GiRaFFE_NRPy-Afield_flux](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb). The electric field in the $i^{\\rm th}$ direction, it will contribute to the $j^{\\rm th}$ and $k^{\\rm th}$ component of the electric field. That is, in Cartesian coordinates, the component $x$ of the electric field will be the average of the values computed on the cell faces in the $\\pm y$- and $\\pm z$-directions, and so forth for the other components. This ultimately results in the six functions we create below."
+    "Here, we will write the function to compute the electric field contribution to the induction equation RHS. This is coded with documentation in [Tutorial-GiRaFFE_NRPy-Afield_flux](Tutorial-GiRaFFE_NRPy-Afield_flux.ipynb). The recontructed values in the $i^{\\rm th}$ direction will contribute to the $j^{\\rm th}$ and $k^{\\rm th}$ component of the electric field. That is, in Cartesian coordinates, the component $x$ of the electric field will be the average of the values computed on the cell faces in the $\\pm y$- and $\\pm z$-directions, and so forth for the other components. However, all of these can be written as only a single function as long as we appropriately pass cyclical permutations of the inputs."
    ]
   },
   {
@@ -582,7 +582,7 @@
     "const int NUM_RECONSTRUCT_GFS = 6;\n",
     "\n",
     "// Include ALL functions needed for evolution\n",
-    "#include \"RHSs/calculate_parentheticals_for_RHSs.h\"\n",
+    "#include \"RHSs/calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\"\n",
     "#include \"RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\"\n",
     "#include \"PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\"\n",
     "#include \"FCVAL/interpolate_metric_gfs_to_cell_faces.h\"\n",
@@ -627,7 +627,7 @@
     "    }\n",
     "    // Next calculate the easier source terms that don't require flux directions\n",
     "    // This will also reset the RHSs for each gf at each new timestep.\n",
-    "    calculate_parentheticals_for_RHSs(params,in_gfs,auxevol_gfs);\n",
+    "    calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs(params,in_gfs,auxevol_gfs);\n",
     "    calculate_AD_gauge_psi6Phi_RHSs(params,in_gfs,auxevol_gfs,rhs_gfs);\n",
     "\n",
     "    // Now, we set up a bunch of structs of pointers to properly guide the PPM algorithm.\n",
@@ -785,7 +785,7 @@
     "To validate the code in this tutorial we check for agreement between the files\n",
     "\n",
     "1. that were generated in this tutorial and\n",
-    "1. those that are generated in the module `GiRaFFE_NRPy_Main_Driver.py`\n"
+    "1. those that are generated in the module [`GiRaFFE_NRPy_Main_Driver.py`](../../edit/in_progress/GiRaFFE_NRPy/GiRaFFE_NRPy_Main_Driver.py)\n"
    ]
   },
   {
@@ -797,7 +797,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_parentheticals_for_RHSs() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_parentheticals_for_RHSs.h\n",
+      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n",
       "Output C function calculate_StildeD0_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD0_source_term.h\n",
       "Output C function calculate_StildeD1_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD1_source_term.h\n",
       "Output C function calculate_StildeD2_source_term() to file GiRaFFE_validation_Ccodes\\RHSs\\calculate_StildeD2_source_term.h\n",
@@ -844,7 +844,7 @@
       "Printing difference between original C code and this code...\n",
       "Checking file GiRaFFE_NRPy_Main_Driver.h\n",
       "No difference. TEST PASSED!\n",
-      "Checking file RHSs/calculate_parentheticals_for_RHSs.h\n",
+      "Checking file RHSs/calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n",
       "No difference. TEST PASSED!\n",
       "Checking file RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\n",
       "No difference. TEST PASSED!\n",
@@ -896,7 +896,7 @@
     "print(\"Printing difference between original C code and this code...\")\n",
     "# Open the files to compare\n",
     "files = [\"GiRaFFE_NRPy_Main_Driver.h\",\n",
-    "         \"RHSs/calculate_parentheticals_for_RHSs.h\",\n",
+    "         \"RHSs/calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\",\n",
     "         \"RHSs/calculate_AD_gauge_psi6Phi_RHSs.h\",\n",
     "         \"PPM/reconstruct_set_of_prims_PPM_GRFFE_NRPy.c\",\n",
     "         \"PPM/loop_defines_reconstruction_NRPy.h\",\n",
@@ -957,7 +957,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+      "Created Tutorial-GiRaFFE_NRPy_Main_Driver.tex, and compiled LaTeX file to\n",
+      "    PDF file Tutorial-GiRaFFE_NRPy_Main_Driver.pdf\n"
      ]
     }
    ],
