--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.ipynb
@@ -87,7 +87,8 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
+    "from outputC import outCfunction, outputC, lhrh # NRPy+: Core C code output module\n",
+    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
     "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
     "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
@@ -510,9 +511,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_StildeD0_source_term() to file Validation/source_terms/calculate_StildeD0_source_term.h\n",
-      "Output C function calculate_StildeD1_source_term() to file Validation/source_terms/calculate_StildeD1_source_term.h\n",
-      "Output C function calculate_StildeD2_source_term() to file Validation/source_terms/calculate_StildeD2_source_term.h\n"
+      "Output C function calculate_StildeD0_source_term() to file Validation/source_terms\\calculate_StildeD0_source_term.h\n",
+      "Output C function calculate_StildeD1_source_term() to file Validation/source_terms\\calculate_StildeD1_source_term.h\n",
+      "Output C function calculate_StildeD2_source_term() to file Validation/source_terms\\calculate_StildeD2_source_term.h\n"
      ]
     }
    ],
@@ -526,93 +527,10 @@
     "AD = ixp.declarerank1(\"AD\",DIM=3)\n",
     "psi6Phi = sp.symbols(\"psi6Phi\",real=True)\n",
     "\n",
-    "# Declare all the Cparameterse we will need\n",
-    "metricderivDDD = ixp.declarerank3(\"metricderivDDD\",\"sym01\",DIM=3)\n",
-    "shiftderivUD = ixp.declarerank2(\"shiftderivUD\",\"nosym\",DIM=3)\n",
-    "lapsederivD = ixp.declarerank1(\"lapsederivD\",DIM=3)\n",
-    "\n",
-    "general_access = \"\"\"const REAL gammaDD00 = auxevol_gfs[IDX4S(GAMMADD00GF,i0,i1,i2)];\n",
-    "const REAL gammaDD01 = auxevol_gfs[IDX4S(GAMMADD01GF,i0,i1,i2)];\n",
-    "const REAL gammaDD02 = auxevol_gfs[IDX4S(GAMMADD02GF,i0,i1,i2)];\n",
-    "const REAL gammaDD11 = auxevol_gfs[IDX4S(GAMMADD11GF,i0,i1,i2)];\n",
-    "const REAL gammaDD12 = auxevol_gfs[IDX4S(GAMMADD12GF,i0,i1,i2)];\n",
-    "const REAL gammaDD22 = auxevol_gfs[IDX4S(GAMMADD22GF,i0,i1,i2)];\n",
-    "const REAL betaU0 = auxevol_gfs[IDX4S(BETAU0GF,i0,i1,i2)];\n",
-    "const REAL betaU1 = auxevol_gfs[IDX4S(BETAU1GF,i0,i1,i2)];\n",
-    "const REAL betaU2 = auxevol_gfs[IDX4S(BETAU2GF,i0,i1,i2)];\n",
-    "const REAL alpha = auxevol_gfs[IDX4S(ALPHAGF,i0,i1,i2)];\n",
-    "const REAL ValenciavU0 = auxevol_gfs[IDX4S(VALENCIAVU0GF,i0,i1,i2)];\n",
-    "const REAL ValenciavU1 = auxevol_gfs[IDX4S(VALENCIAVU1GF,i0,i1,i2)];\n",
-    "const REAL ValenciavU2 = auxevol_gfs[IDX4S(VALENCIAVU2GF,i0,i1,i2)];\n",
-    "const REAL BU0 = auxevol_gfs[IDX4S(BU0GF,i0,i1,i2)];\n",
-    "const REAL BU1 = auxevol_gfs[IDX4S(BU1GF,i0,i1,i2)];\n",
-    "const REAL BU2 = auxevol_gfs[IDX4S(BU2GF,i0,i1,i2)];\n",
-    "\"\"\"\n",
-    "metric_deriv_access = ixp.zerorank1(DIM=3)\n",
-    "metric_deriv_access[0] = \"\"\"const REAL metricderivDDD000 = (auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL metricderivDDD010 = (auxevol_gfs[IDX4S(GAMMA_FACEDD01GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD01GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL metricderivDDD020 = (auxevol_gfs[IDX4S(GAMMA_FACEDD02GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD02GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL metricderivDDD110 = (auxevol_gfs[IDX4S(GAMMA_FACEDD11GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD11GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL metricderivDDD120 = (auxevol_gfs[IDX4S(GAMMA_FACEDD12GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD12GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL metricderivDDD220 = (auxevol_gfs[IDX4S(GAMMA_FACEDD22GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD22GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL shiftderivUD00 = (auxevol_gfs[IDX4S(BETA_FACEU0GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(BETA_FACEU0GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL shiftderivUD10 = (auxevol_gfs[IDX4S(BETA_FACEU1GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(BETA_FACEU1GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL shiftderivUD20 = (auxevol_gfs[IDX4S(BETA_FACEU2GF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(BETA_FACEU2GF,i0,i1,i2)])/dxx0;\n",
-    "const REAL lapsederivD0 = (auxevol_gfs[IDX4S(ALPHA_FACEGF,i0+1,i1,i2)]-auxevol_gfs[IDX4S(ALPHA_FACEGF,i0,i1,i2)])/dxx0;\n",
-    "REAL Stilde_rhsD0;\n",
-    "\"\"\"\n",
-    "metric_deriv_access[1] = \"\"\"const REAL metricderivDDD001 = (auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL metricderivDDD011 = (auxevol_gfs[IDX4S(GAMMA_FACEDD01GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD01GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL metricderivDDD021 = (auxevol_gfs[IDX4S(GAMMA_FACEDD02GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD02GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL metricderivDDD111 = (auxevol_gfs[IDX4S(GAMMA_FACEDD11GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD11GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL metricderivDDD121 = (auxevol_gfs[IDX4S(GAMMA_FACEDD12GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD12GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL metricderivDDD221 = (auxevol_gfs[IDX4S(GAMMA_FACEDD22GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(GAMMA_FACEDD22GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL shiftderivUD01 = (auxevol_gfs[IDX4S(BETA_FACEU0GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(BETA_FACEU0GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL shiftderivUD11 = (auxevol_gfs[IDX4S(BETA_FACEU1GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(BETA_FACEU1GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL shiftderivUD21 = (auxevol_gfs[IDX4S(BETA_FACEU2GF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(BETA_FACEU2GF,i0,i1,i2)])/dxx1;\n",
-    "const REAL lapsederivD1 = (auxevol_gfs[IDX4S(ALPHA_FACEGF,i0,i1+1,i2)]-auxevol_gfs[IDX4S(ALPHA_FACEGF,i0,i1,i2)])/dxx1;\n",
-    "REAL Stilde_rhsD1;\n",
-    "\"\"\"\n",
-    "metric_deriv_access[2] = \"\"\"const REAL metricderivDDD002 = (auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL metricderivDDD012 = (auxevol_gfs[IDX4S(GAMMA_FACEDD01GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(GAMMA_FACEDD01GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL metricderivDDD022 = (auxevol_gfs[IDX4S(GAMMA_FACEDD02GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(GAMMA_FACEDD02GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL metricderivDDD112 = (auxevol_gfs[IDX4S(GAMMA_FACEDD11GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(GAMMA_FACEDD11GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL metricderivDDD122 = (auxevol_gfs[IDX4S(GAMMA_FACEDD12GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(GAMMA_FACEDD12GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL metricderivDDD222 = (auxevol_gfs[IDX4S(GAMMA_FACEDD22GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(GAMMA_FACEDD22GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL shiftderivUD02 = (auxevol_gfs[IDX4S(BETA_FACEU0GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(BETA_FACEU0GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL shiftderivUD12 = (auxevol_gfs[IDX4S(BETA_FACEU1GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(BETA_FACEU1GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL shiftderivUD22 = (auxevol_gfs[IDX4S(BETA_FACEU2GF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(BETA_FACEU2GF,i0,i1,i2)])/dxx2;\n",
-    "const REAL lapsederivD2 = (auxevol_gfs[IDX4S(ALPHA_FACEGF,i0,i1,i2+1)]-auxevol_gfs[IDX4S(ALPHA_FACEGF,i0,i1,i2)])/dxx2;\n",
-    "REAL Stilde_rhsD2;\n",
-    "\"\"\"\n",
-    "write_final_quantity = ixp.zerorank1(DIM=3)\n",
-    "write_final_quantity[0] = \"\"\"rhs_gfs[IDX4S(STILDED0GF,i0,i1,i2)] += Stilde_rhsD0;\n",
-    "\"\"\"\n",
-    "write_final_quantity[1] = \"\"\"rhs_gfs[IDX4S(STILDED1GF,i0,i1,i2)] += Stilde_rhsD1;\n",
-    "\"\"\"\n",
-    "write_final_quantity[2] = \"\"\"rhs_gfs[IDX4S(STILDED2GF,i0,i1,i2)] += Stilde_rhsD2;\n",
-    "\"\"\"\n",
-    "# We need to rerun a few of these functions with the reset lists to make sure these functions\n",
-    "# don't cheat by using analytic expressions\n",
-    "GRHD.compute_sqrtgammaDET(gammaDD)\n",
-    "GRHD.u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha, betaU, gammaDD, ValenciavU)\n",
-    "GRFFE.compute_smallb4U(gammaDD, betaU, alpha, GRHD.u4U_ito_ValenciavU, BU, sqrt4pi)\n",
-    "GRFFE.compute_smallbsquared(gammaDD, betaU, alpha, GRFFE.smallb4U)\n",
-    "GRFFE.compute_TEM4UU(gammaDD,betaU,alpha, GRFFE.smallb4U, GRFFE.smallbsquared,GRHD.u4U_ito_ValenciavU)\n",
-    "GRHD.compute_g4DD_zerotimederiv_dD(gammaDD,betaU,alpha, metricderivDDD,shiftderivUD,lapsederivD)\n",
-    "GRHD.compute_S_tilde_source_termD(alpha, GRHD.sqrtgammaDET,GRHD.g4DD_zerotimederiv_dD, GRFFE.TEM4UU)\n",
-    "for i in range(3):\n",
-    "    desc = \"Adds the source term to StildeD\"+str(i)+\".\"\n",
-    "    name = \"calculate_StildeD\"+str(i)+\"_source_term\"\n",
-    "    outCfunction(\n",
-    "        outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
-    "        params   =\"const paramstruct *params,REAL *xx[3],const REAL *auxevol_gfs, REAL *rhs_gfs\",\n",
-    "        body     = general_access \\\n",
-    "                  +metric_deriv_access[i]\\\n",
-    "                  +outputC(GRHD.S_tilde_source_termD[i],\"Stilde_rhsD\"+str(i),\"returnstring\",params=\"outCverbose=False\").replace(\"IDX4\",\"IDX4S\")\\\n",
-    "                  +write_final_quantity[i],\n",
-    "        loopopts =\"InteriorPoints\",\n",
-    "        rel_path_for_Cparams=os.path.join(\"../\"))\n"
+    "import GiRaFFE_NRPy.GiRaFFE_NRPy_Source_Terms as source\n",
+    "outCparams = \"outCverbose=False,CSE_sorting=none\"\n",
+    "source.write_out_functions_for_StildeD_source_term(os.path.join(out_dir,subdir),outCparams,gammaDD,betaU,alpha,\n",
+    "                                                   ValenciavU,BU,sqrt4pi)"
    ]
   },
   {
@@ -633,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_parentheticals_for_RHSs() to file Validation/source_terms/calculate_parentheticals_for_RHSs.h\n"
+      "Output C function calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs() to file Validation/source_terms\\calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\n"
      ]
     }
    ],
@@ -643,8 +561,8 @@
     "\n",
     "\n",
     "\n",
-    "GRFFE.compute_AD_source_term_parenthetical_for_FD(GRHD.sqrtgammaDET,betaU,alpha,psi6Phi,AD)\n",
-    "GRFFE.compute_psi6Phi_rhs_parenthetical(gammaDD,GRHD.sqrtgammaDET,betaU,alpha,AD,psi6Phi)\n",
+    "GRFFE.compute_AD_source_term_operand_for_FD(GRHD.sqrtgammaDET,betaU,alpha,psi6Phi,AD)\n",
+    "GRFFE.compute_psi6Phi_rhs_flux_term_operand(gammaDD,GRHD.sqrtgammaDET,betaU,alpha,AD,psi6Phi)\n",
     "\n",
     "parens_to_print = [\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"AevolParen\"),rhs=GRFFE.AevolParen),\\\n",
@@ -654,7 +572,7 @@
     "                  ]\n",
     "\n",
     "desc = \"Calculate quantities to be finite-differenced for the GRFFE RHSs\"\n",
-    "name = \"calculate_parentheticals_for_RHSs\"\n",
+    "name = \"calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs\"\n",
     "outCfunction(\n",
     "    outfile  = os.path.join(out_dir,subdir,name+\".h\"), desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *xx[3],const REAL *in_gfs,REAL *auxevol_gfs\",\n",
@@ -672,14 +590,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file Validation/source_terms/calculate_AD_gauge_psi6Phi_RHSs.h\n"
+      "Output C function calculate_AD_gauge_psi6Phi_RHSs() to file Validation/source_terms\\calculate_AD_gauge_psi6Phi_RHSs.h\n"
      ]
     }
    ],
@@ -736,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +805,7 @@
     "#include \"source_terms/calculate_StildeD0_source_term.h\"\n",
     "#include \"source_terms/calculate_StildeD1_source_term.h\"\n",
     "#include \"source_terms/calculate_StildeD2_source_term.h\"\n",
-    "#include \"source_terms/calculate_parentheticals_for_RHSs.h\"\n",
+    "#include \"source_terms/calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs.h\"\n",
     "#include \"source_terms/calculate_AD_gauge_psi6Phi_RHSs.h\"\n",
     "\n",
     "int main(int argc, const char *argv[]) {\n",
@@ -944,14 +862,14 @@
     "    // Now, run our function:\n",
     "    int flux_dirn = 0;\n",
     "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn+1);\n",
-    "    calculate_StildeD0_source_term(&params,xx,auxevol_gfs,rhs_gfs);\n",
+    "    calculate_StildeD0_source_term(&params,auxevol_gfs,rhs_gfs);\n",
     "    flux_dirn = 1;\n",
     "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn+1);\n",
-    "    calculate_StildeD1_source_term(&params,xx,auxevol_gfs,rhs_gfs);\n",
+    "    calculate_StildeD1_source_term(&params,auxevol_gfs,rhs_gfs);\n",
     "    flux_dirn = 2;\n",
     "    interpolate_metric_gfs_to_cell_faces(&params,auxevol_gfs,flux_dirn+1);\n",
-    "    calculate_StildeD2_source_term(&params,xx,auxevol_gfs,rhs_gfs);\n",
-    "    calculate_parentheticals_for_RHSs(&params,xx,evol_gfs,auxevol_gfs);\n",
+    "    calculate_StildeD2_source_term(&params,auxevol_gfs,rhs_gfs);\n",
+    "    calculate_AD_gauge_term_psi6Phi_flux_term_for_RHSs(&params,xx,evol_gfs,auxevol_gfs);\n",
     "    calculate_AD_gauge_psi6Phi_RHSs(&params,xx,evol_gfs,auxevol_gfs,rhs_gfs);\n",
     "    /*printf(\"Exact: Stilde_rhsD: %.15e,%.15e,%.15e\\n\",rhs_exact_gfs[IDX4S(STILDED0GF,4,4,4)],rhs_exact_gfs[IDX4S(STILDED1GF,4,4,4)],rhs_exact_gfs[IDX4S(STILDED2GF,4,4,4)]);\n",
     "    printf(\"Numer: Stilde_rhsD: %.15e,%.15e,%.15e\\n\",rhs_gfs[IDX4S(STILDED0GF,4,4,4)],rhs_gfs[IDX4S(STILDED1GF,4,4,4)],rhs_gfs[IDX4S(STILDED2GF,4,4,4)]);\n",
@@ -995,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1005,35 +923,19 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test -lm`...\n",
-      "Finished executing in 1.2167835235595703 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.c -o Validation/Stilde_source_A_gauge_Phi_rhs_unit_test.exe -lm`...\n",
+      "(BENCH): Finished executing in 5.280302047729492 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.2294585704803467 seconds.\n",
+      "Finished in 5.418310165405273 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "dxx0,dxx1,dxx2 = 2.00000e-01,2.00000e-01,2.00000e-01\n",
-      "xx[0][0] = -8.000000000000000e-01\n",
-      "xx[0][1] = -6.000000000000001e-01\n",
-      "xx[0][2] = -4.000000000000000e-01\n",
-      "xx[0][3] = -2.000000000000000e-01\n",
-      "xx[0][4] = 0.000000000000000e+00\n",
-      "xx[0][5] = 2.000000000000000e-01\n",
-      "xx[0][6] = 4.000000000000000e-01\n",
-      "xx[0][7] = 6.000000000000001e-01\n",
-      "dxx0,dxx1,dxx2 = 1.00000e-01,1.00000e-01,1.00000e-01\n",
-      "xx[0][0] = -5.000000000000000e-01\n",
-      "xx[0][1] = -4.000000000000000e-01\n",
-      "xx[0][2] = -3.000000000000000e-01\n",
-      "xx[0][3] = -2.000000000000000e-01\n",
-      "xx[0][4] = -1.000000000000000e-01\n",
-      "xx[0][5] = 0.000000000000000e+00\n",
-      "xx[0][6] = 1.000000000000000e-01\n",
-      "xx[0][7] = 2.000000000000000e-01\n",
-      "xx[0][8] = 3.000000000000000e-01\n",
-      "xx[0][9] = 4.000000000000000e-01\n",
-      "Finished in 0.2607285976409912 seconds.\n",
+      "(EXEC): Executing `cmd /c Validation\\Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2`...\n",
+      "(BENCH): Finished executing in 0.44602537155151367 seconds.\n",
+      "(EXEC): Executing `cmd /c Validation\\Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4`...\n",
+      "(BENCH): Finished executing in 0.24201393127441406 seconds.\n",
+      "Finished in 0.9500541687011719 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1050,9 +952,9 @@
     "\n",
     "print(\"Now running...\\n\")\n",
     "start = time.time()\n",
-    "!./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 2 2 2\n",
+    "cmd.Execute(os.path.join(\"Validation\",\"Stilde_source_A_gauge_Phi_rhs_unit_test\"), \"2 2 2\")\n",
     "# To do a convergence test, we'll also need a second grid with twice the resolution.\n",
-    "!./Validation/Stilde_source_A_gauge_Phi_rhs_unit_test 4 4 4\n",
+    "cmd.Execute(os.path.join(\"Validation\",\"Stilde_source_A_gauge_Phi_rhs_unit_test\"), \"4 4 4\")\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n"
    ]
@@ -1071,21 +973,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The following quantities converge at the listed order (should be ~2):\n",
-      "Stilde_rhsD0: 2.0331691730607853\n",
-      "Stilde_rhsD1: 2.19343762296608\n",
-      "Stilde_rhsD2: 2.1412625521533175\n",
-      "A_rhsD0:      2.017299839695867\n",
-      "A_rhsD1:      2.0210492279403764\n",
-      "A_rhsD2:      2.0022838026313523\n",
-      "psi6Phi:      2.0107304427621933\n"
+      "PASS: Stilde_rhsD0 has convergence order of 2.0283969804790263\n",
+      "PASS: Stilde_rhsD1 has convergence order of 2.0283969804790263\n",
+      "Stilde_rhsD0: 2.0283969804790263\n",
+      "Stilde_rhsD1: 1.9552339585393523\n",
+      "Stilde_rhsD2: 1.9438809175383802\n",
+      "A_rhsD0:      2.723387388030936\n",
+      "A_rhsD1:      2.450318718360834\n",
+      "A_rhsD2:      2.006383110580485\n",
+      "psi6Phi:      2.05357137129402\n"
      ]
     }
    ],
@@ -1135,9 +1038,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms.tex,\n",
+      "    and compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-\n",
+      "    GiRaFFE_NRPy-Source_Terms.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Source_Terms\")"
