--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -49,25 +49,26 @@
     "\n",
     "In the following section, we discuss [lexical analysis](https://en.wikipedia.org/wiki/Lexical_analysis) (lexing) and [syntax analysis](https://en.wikipedia.org/wiki/Parsing) (parsing). In the process of lexical analysis, a lexer will tokenize a character string, called a sentence, using substring pattern matching (or tokenizing). We implemented a regex-based lexer for NRPy+, which does pattern matching using a [regular expression](https://en.wikipedia.org/wiki/Regular_expression) for each token pattern. In the process of syntax analysis, a parser will receive a token iterator from the lexer and build a parse tree containing all syntactic information of the language, as specified by a [formal grammar](https://en.wikipedia.org/wiki/Formal_grammar). We implemented a [recursive descent parser](https://en.wikipedia.org/wiki/Recursive_descent_parser) for NRPy+, which will build a parse tree in [preorder](https://en.wikipedia.org/wiki/Tree_traversal#Pre-order_(NLR)), starting from the root [nonterminal](https://en.wikipedia.org/wiki/Terminal_and_nonterminal_symbols), using a [right recursive](https://en.wikipedia.org/wiki/Left_recursion) grammar. The following right recursive, [context-free grammar](https://en.wikipedia.org/wiki/Context-free_grammar) was written for parsing [LaTeX](https://en.wikipedia.org/wiki/LaTeX), adhering to the canonical (extended) [BNF](https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form) notation used for describing a context-free grammar:\n",
     "```\n",
-    "<ROOT>       -> <EXPRESSION> | <STRUCTURE> { <LINE_BREAK> <STRUCTURE> }*\n",
-    "<STRUCTURE>  -> <CONFIG> | <ENVIROMENT> | <ASSIGNMENT>\n",
-    "<ENVIROMENT> -> <BEGIN_ALIGN> <ASSIGNMENT> { <LINE_BREAK> <ASSIGNMENT> }* <END_ALIGN>\n",
-    "<ASSIGNMENT> -> <VARIABLE> = <EXPRESSION>\n",
-    "<EXPRESSION> -> <TERM> { ( '+' | '-' ) <TERM> }*\n",
-    "<TERM>       -> <FACTOR> { [ '/' ] <FACTOR> }*\n",
-    "<FACTOR>     -> <BASE> { '^' <EXPONENT> }*\n",
-    "<BASE>       -> [ '-' ] ( <ATOM> | '(' <EXPRESSION> ')' | '[' <EXPRESSION> ']' )\n",
-    "<EXPONENT>   -> <BASE> | '{' <BASE> '}'\n",
-    "<ATOM>       -> <VARIABLE> | <NUMBER> | <COMMAND>\n",
-    "<VARIABLE>   -> <ARRAY> | <SYMBOL> [ '_' ( <SYMBOL> | <INTEGER> ) ]\n",
-    "<NUMBER>     -> <RATIONAL> | <DECIMAL> | <INTEGER>\n",
-    "<COMMAND>    -> <SQRT> | <FRAC>\n",
-    "<SQRT>       -> '\\\\sqrt' [ '[' <INTEGER> ']' ] '{' <EXPRESSION> '}'\n",
-    "<FRAC>       -> '\\\\frac' '{' <EXPRESSION> '}' '{' <EXPRESSION> '}'\n",
-    "<CONFIG>     -> '%' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] { ',' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] }*\n",
-    "<ARRAY>      -> ( <SYMBOL | <TENSOR> ) \n",
-    "                    [ '_' ( <SYMBOL> | '{' { <SYMBOL> }+ '}' ) [ '^' ( <SYMBOL> | '{' { <SYMBOL> }+ '}' ) ]\n",
-    "                    | '^' ( <SYMBOL> | '{' { <SYMBOL> }+ '}' ) [ '_' ( <SYMBOL> | '{' { <SYMBOL> }+ '}' ) ] ]\n",
+    "<ROOT>         -> <EXPRESSION> | <STRUCTURE> { <LINE_BREAK> <STRUCTURE> }*\n",
+    "<STRUCTURE>    -> <CONFIG> | <ENVIRONMENT> | <ASSIGNMENT>\n",
+    "<ENVIRONMENT>  -> <BEGIN_ALIGN> <ASSIGNMENT> { <LINE_BREAK> <ASSIGNMENT> }* <END_ALIGN>\n",
+    "<ASSIGNMENT>   -> <VARIABLE> = <EXPRESSION>\n",
+    "<EXPRESSION>   -> <TERM> { ( '+' | '-' ) <TERM> }*\n",
+    "<TERM>         -> <FACTOR> { [ '/' ] <FACTOR> }*\n",
+    "<FACTOR>       -> <BASE> { '^' <EXPONENT> }*\n",
+    "<BASE>         -> [ '-' ] ( <ATOM> | '(' <EXPRESSION> ')' | '[' <EXPRESSION> ']' )\n",
+    "<EXPONENT>     -> <BASE> | '{' <BASE> '}'\n",
+    "<ATOM>         -> <VARIABLE> | <NUMBER> | <COMMAND>\n",
+    "<VARIABLE>     -> <ARRAY> | <SYMBOL> [ '_' ( <SYMBOL> | <INTEGER> ) ]\n",
+    "<NUMBER>       -> <RATIONAL> | <DECIMAL> | <INTEGER>\n",
+    "<COMMAND>      -> <SQRT> | <FRAC> | <DERV>\n",
+    "<SQRT>         -> '\\\\sqrt' [ '[' <INTEGER> ']' ] '{' <EXPRESSION> '}'\n",
+    "<FRAC>         -> '\\\\frac' '{' <EXPRESSION> '}' '{' <EXPRESSION> '}'\n",
+    "<DERV>         -> { '\\\\partial' '_' <LOWER_INDEX> }+ <ARRAY>\n",
+    "<CONFIG>       -> '%' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] { ',' <ARRAY> '[' <INTEGER> ']' [ ':' <SYMMETRY> ] }*\n",
+    "<ARRAY>        -> <TENSOR> ( '_' <LOWER_INDEX> ) | ( '^' <UPPER_INDEX> [ '_' <LOWER_INDEX> ] ] )\n",
+    "<LOWER_INDEX>  -> <SYMBOL> | '{' { <SYMBOL> }* [ ',' { <SYMBOL> }+ ] '}'\n",
+    "<UPPER_INDEX>  -> <SYMBOL> | '{' { <SYMBOL> }+ '}'\n",
     "```\n",
     "\n",
     "<small>**Source**: Robert W. Sebesta. Concepts of Programming Languages. Pearson Education Limited, 2016.</small>"
@@ -291,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 1\n",
+    "#### Example 1 (Tensor Contraction)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
     "<pre lang=\"latex\"> h = h^\\\\mu{}_\\\\mu </pre> | $$ h = h^\\mu{}_\\mu $$"
@@ -341,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 2\n",
+    "#### Example 2 (Index Raising)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
     "<pre lang=\"latex\"> v^\\\\mu = g^{\\\\mu\\\\nu}v_\\\\nu </pre> | $$ v^\\mu = g^{\\mu\\nu}v_\\nu $$"
@@ -355,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "['gUU', 'gDD', 'vD', 'vU']"
+       "['gUU', 'vD', 'vU']"
       ]
      },
      "execution_count": 11,
@@ -391,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example 3\n",
+    "#### Example 3 (Einstein Tensor)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
     "<pre lang=\"latex\"> \\\\begin{align\\*}<br>&emsp;&emsp;&emsp; R &= g_{ab}R^{ab} \\\\\\\\ <br>&emsp;&emsp;&emsp; G^{ab} &= R^{ab} - \\\\frac{1}{2}g^{ab}R <br> \\\\end{align\\*} </pre> | $$ \\begin{align*} R &= g_{ab}R^{ab} \\\\ G^{ab} &= R^{ab} - \\frac{1}{2}g^{ab}R \\end{align*} $$"
@@ -468,12 +469,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The static variable `namespace` for the `Parser` class will provide access to the global namespace of the parser across each instance of the class."
+    "#### Example 4 (Cross Product)\n",
+    "LaTeX Source | Rendered LaTeX\n",
+    ":----------- | :-------------\n",
+    "<pre lang=\"latex\"> u_i = \\epsilon_{ijk} v^j w^k </pre> | $$ u_i = \\epsilon_{ijk} v^j w^k $$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['epsilonDDD', 'vU', 'wU', 'uD']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse(r\"\"\"\n",
+    "    % \\epsilon_{ijk} [3]: permutation, v^j [3], w^k [3];\n",
+    "    u_i = \\epsilon_{ijk} v^j w^k\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uD = [vU1*wU2 - vU2*wU1, -vU0*wU2 + vU2*wU0, vU0*wU1 - vU1*wU0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('uD =', uD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The static variable `namespace` for the `Parser` class will provide access to the global namespace of the parser across each instance of the class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -490,22 +541,26 @@
        "                -gDD01/(gDD00*gDD11 - gDD01**2)],\n",
        "               [-gDD01/(gDD00*gDD11 - gDD01**2),\n",
        "                gDD00/(gDD00*gDD11 - gDD01**2)]]),\n",
-       "             ('gDD', [[gDD00, gDD01], [gDD01, gDD11]]),\n",
        "             ('vD', [vD0, vD1, vD2]),\n",
-       "             ('vU',\n",
-       "              [gUU00*vD0 + gUU01*vD1 + gUU02*vD2,\n",
-       "               gUU01*vD0 + gUU11*vD1 + gUU12*vD2,\n",
-       "               gUU02*vD0 + gUU12*vD1 + gUU22*vD2]),\n",
+       "             ('vU', [vU0, vU1, vU2]),\n",
+       "             ('gDD', [[gDD00, gDD01], [gDD01, gDD11]]),\n",
        "             ('RUU', [[RUU00, RUU01], [RUU01, RUU11]]),\n",
        "             ('R', RUU00*gDD00 + 2*RUU01*gDD01 + RUU11*gDD11),\n",
        "             ('GUU',\n",
        "              [[RUU00 + gDD11*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2)),\n",
        "                RUU01 - gDD01*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2))],\n",
        "               [RUU01 - gDD01*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2)),\n",
-       "                RUU11 + gDD00*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2))]])])"
+       "                RUU11 + gDD00*(-RUU00*gDD00 - 2*RUU01*gDD01 - RUU11*gDD11)/(2*(gDD00*gDD11 - gDD01**2))]]),\n",
+       "             ('epsilonDDD',\n",
+       "              [[[0, 0, 0], [0, 0, 1], [0, -1, 0]],\n",
+       "               [[0, 0, -1], [0, 0, 0], [1, 0, 0]],\n",
+       "               [[0, 1, 0], [-1, 0, 0], [0, 0, 0]]]),\n",
+       "             ('wU', [wU0, wU1, wU2]),\n",
+       "             ('uD',\n",
+       "              [vU1*wU2 - vU2*wU1, -vU0*wU2 + vU2*wU0, vU0*wU1 - vU1*wU0])])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,18 +616,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created Tutorial-LaTeX_SymPy_Conversion.tex, and compiled LaTeX file to PDF\n",
-      "    file Tutorial-LaTeX_SymPy_Conversion.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_SymPy_Conversion\")"
