GiRaFFE_NRPy_Main_Driver_staggered: Implemented the new modules into the tutorial and fixed some grammar.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver.ipynb
@@ -209,7 +209,7 @@
     "## Step 1.b: Calculate the source terms of $\\partial_t A_i$, $\\partial_t \\tilde{S}_i$, and $\\partial_t [\\sqrt{\\gamma} \\Phi]$ right-hand sides \\[Back to [top](#toc)\\]\n",
     "$$\\label{source}$$\n",
     "\n",
-    "With the operands of the gradient of divergence operators stored in memory from the previous step, we can now now calculate the terms on the RHS of $A_i$ and $[\\sqrt{\\gamma} \\Phi]$ that involve the derivatives of those terms. We also compute the other term in the RHS of $[\\sqrt{\\gamma} \\Phi]$, which is a straightforward damping term. "
+    "With the operands of the gradient of divergence operators stored in memory from the previous step, we can now calculate the terms on the RHS of $A_i$ and $[\\sqrt{\\gamma} \\Phi]$ that involve the derivatives of those terms. We also compute the other term in the RHS of $[\\sqrt{\\gamma} \\Phi]$, which is a straightforward damping term. "
    ]
   },
   {
