--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -195,10 +195,14 @@
     "&= -\\frac{y}{x^2+y^2} \\bar{\\Lambda}^{x} + \n",
     "\\frac{x}{x^2+y^2} \\bar{\\Lambda}^{y} \\\\\n",
     "&= -\\frac{y}{(r \\sin\\theta)^2} \\bar{\\Lambda}^{x} + \n",
-    "\\frac{x}{(r \\sin\\theta)^2} \\bar{\\Lambda}^{y}.\n",
+    "\\frac{x}{(r \\sin\\theta)^2} \\bar{\\Lambda}^{y} \\\\\n",
+    "&= -\\frac{r \\sin\\theta \\sin\\phi}{(r \\sin\\theta)^2} \\bar{\\Lambda}^{x} + \n",
+    "\\frac{r \\sin\\theta \\cos\\phi}{(r \\sin\\theta)^2} \\bar{\\Lambda}^{y}\\\\\n",
+    "&= -\\frac{\\sin\\phi}{r \\sin\\theta} \\bar{\\Lambda}^{x} + \n",
+    "\\frac{\\cos\\phi}{r \\sin\\theta} \\bar{\\Lambda}^{y}\\\\\n",
     "\\end{align}\n",
     "\n",
-    "Thus $\\bar{\\Lambda}^{\\phi}$ diverges at all points where $r\\sin\\theta=0$ (or equivalently where $x=y=0$; i.e., the $z$-axis) due to the $\\frac{1}{(r\\sin\\theta)^2}$ that appear in the Jacobian transformation. \n",
+    "Thus $\\bar{\\Lambda}^{\\phi}$ diverges at all points where $r\\sin\\theta=0$ (or equivalently where $x=y=0$; i.e., the $z$-axis) due to the $\\frac{1}{r\\sin\\theta}$ that appear in the Jacobian transformation.\n",
     "\n",
     "This divergence might pose no problem on cell-centered grids that avoid $r \\sin\\theta=0$, except that the BSSN equations require that *first and second derivatives* of these quantities be taken. Usual strategies for numerical approximation of these derivatives (e.g., finite difference methods) will \"see\" these divergences and errors generally will not drop to zero with increased numerical sampling of the functions at points near where the functions diverge.\n",
     "\n",
@@ -1684,10 +1688,10 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.41016125679016113 seconds.\n",
+      "(BENCH): Finished executing in 0.4092447757720947 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "(BENCH): Finished executing in 0.2092418670654297 seconds.\n",
+      "(BENCH): Finished executing in 0.208024263381958 seconds.\n",
       "(BENCH) Finished this code cell.\n"
      ]
     }
@@ -1736,19 +1740,19 @@
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.6104001998901367 seconds.\n",
+      "(BENCH): Finished executing in 0.6099526882171631 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "(BENCH): Finished executing in 0.20914030075073242 seconds.\n",
+      "(BENCH): Finished executing in 0.20826983451843262 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "(BENCH): Finished executing in 0.6105663776397705 seconds.\n",
+      "(BENCH): Finished executing in 0.610424280166626 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "(BENCH): Finished executing in 0.20924901962280273 seconds.\n",
+      "(BENCH): Finished executing in 0.20926189422607422 seconds.\n",
       "(BENCH) Finished this code cell.\n",
       "\n",
       "\n",
